--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="description" content="Currently working as an Application Architect at PropsHub Inc for developing an end-to-end platform for real estate agents to provide them with a complete digital solution including website, email account, CMS, CRM, Purchase Offer Management, etc. Also have work experience in the field of E-commerce developed using SAP Hybris. Skilled in Java, Microservices, Spring Cloud, AWS, Python, Machine Learning, Problem Solving & Architectural Design Skills, etc.">
       <meta name="keywords" content="Umang Kedia">
       <meta name="author" content="Umang Kedia">
-      <title>First</title>
+      <title>Umang Kedia Resume</title>
    </head>
    <body style="width:780px">
       <table>
