--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
       <meta name="description" content="Currently working as an Application Architect at PropsHub Inc for developing an end-to-end platform for real estate agents to provide them with a complete digital solution including website, email account, CMS, CRM, Purchase Offer Management, etc. Also have work experience in the field of E-commerce developed using SAP Hybris. Skilled in Java, Microservices, Spring Cloud, AWS, Python, Machine Learning, Problem Solving & Architectural Design Skills, etc.">
       <meta name="keywords" content="Umang Kedia">
       <meta name="author" content="Umang Kedia">
