--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
+	  <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
       <meta name="description" content="Currently working as an Application Architect at PropsHub Inc for developing an end-to-end platform for real estate agents to provide them with a complete digital solution including website, email account, CMS, CRM, Purchase Offer Management, etc. Also have work experience in the field of E-commerce developed using SAP Hybris. Skilled in Java, Microservices, Spring Cloud, AWS, Python, Machine Learning, Problem Solving & Architectural Design Skills, etc.">
       <meta name="keywords" content="Umang Kedia">
       <meta name="author" content="Umang Kedia">
@@ -58,7 +58,7 @@
          </ul>
       </div>
       <p style='margin-top:12.0pt;margin-right:0cm;margin-bottom:0cm;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri",sans-serif;'><strong>RSB Metal Tech. PVT. LTD</strong><span style="float:right">Bhubaneswar, India</span></p>
-      <p style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri",sans-serif;'><strong>Technical Intern</strong><span style="float:right">June 2012 &ndash; June&nbsp;2012</span></p>
+      <p style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri",sans-serif;'><strong>Technical Intern</strong><span style="float:right">June 2012 </span></p>
       <div style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'>
          <ul style="margin-bottom:0cm;list-style-type: disc;margin-block-start: 0;
             margin-block-end: 0;">
