--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
    <head>
+      <style>
+         @media only screen and (min-width: 780px) {
+         body {
+         width:780px;
+         }
+         }
+      </style>
       <meta charset="utf-8">
-	  <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
       <meta name="description" content="Currently working as an Application Architect at PropsHub Inc for developing an end-to-end platform for real estate agents to provide them with a complete digital solution including website, email account, CMS, CRM, Purchase Offer Management, etc. Also have work experience in the field of E-commerce developed using SAP Hybris. Skilled in Java, Microservices, Spring Cloud, AWS, Python, Machine Learning, Problem Solving & Architectural Design Skills, etc.">
       <meta name="keywords" content="Umang Kedia">
       <meta name="author" content="Umang Kedia">
       <title>Umang Kedia Resume</title>
    </head>
-   <body style="width:780px">
+   <body>
       <table>
          <tr>
             <td><img src="https://media-exp2.licdn.com/dms/image/C5103AQHJts_9kXxzdg/profile-displayphoto-shrink_400_400/0/1550058351822?e=1661385600&v=beta&t=Y5KbUrgv0NS_NPexjLKzX5HxwZNxTHtJWs7nVjDSvc4" width="100" /></td>
