--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html lang="en">
    <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
-         @media only screen and (min-width: 780px) {
-         body {
-         width:780px;
-         }
-         }
+        /* Media Query for Large screens */
+        @media (max-width: 780px) {
+            body {
+                width: fit-content;
+            }
+        }
+		@media (min-width: 780px) {
+            body {
+                width:780;
+            }
+        }
       </style>
       <meta charset="utf-8">
       <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
